--- a/Project Modeling.Rmd
+++ b/Project Modeling.Rmd
@@ -12,7 +12,8 @@ pkgTest <- function(x) {
     install.packages(x,dep=TRUE) 
   }
 }
-pkgs <- c("tidyverse", "ggplot2", "ggpubr", "cowplot", "reshape2", "caTools", "MASS", "psych")
+pkgs <- c("tidyverse", "ggplot2", "ggpubr", "cowplot", "reshape2", "caTools", "MASS", "psych", 
+          "gridExtra")
 
 for (pkg in pkgs) {
   pkgTest(pkg)
@@ -29,6 +30,8 @@ library(caTools)
 library(MASS)
 library(psych)
 library(randomForest)
+library(gridExtra)
+library(grid)
 ```
 
 ```{r message = FALSE}
@@ -83,8 +86,10 @@ ggplot(avg.dem.dist, aes(x = region, y = value * 100, fill = reorder(variable, -
   labs(title = "Average Demographic Distribution by Region", 
        x = "Region", 
        y = "Percent") + 
-  theme_minimal() + 
+  
+  theme_bw() + 
   rotate_x_text(angle = 50)
+
 ```
 
 ```{r}
@@ -108,14 +113,28 @@ col.pal.2 = c('#66c2a5',
               '#e5c494',
               '#b3b3b3')
 
-ggplot(school_df_final, aes(x = growth_index_score, fill = region)) + 
+p1 <- ggplot(school_df_final, aes(x = growth_index_score, fill = region)) + 
   geom_histogram(binwidth = 0.9, show.legend = FALSE) + 
   facet_wrap(~region, nrow = 4) + 
-  labs(title = "Histogram of Growth Index Score by Region", 
-       x = "Growth Index Score", 
-       y = "Count") +
+  labs(subtitle = "by Region") +
   scale_fill_manual(values = col.pal.2) + 
-  theme_bw() 
+  theme_bw() +
+  theme(axis.title.x=element_blank(),
+        axis.title.y=element_blank())
+
+
+
+p2 <- ggplot(school_df_final, aes(x = growth_index_score)) + 
+  geom_histogram(binwidth = 0.9, show.legend = FALSE, col = "black", fill = "#74a9cf") +
+  labs(y = "Count")+ 
+  theme_bw() + 
+  theme(axis.title.x=element_blank(),
+        axis.title.y=element_blank())
+
+grid.arrange(arrangeGrob(plot_grid(p2,p1,ncol=2), 
+                         top = textGrob("Histograms of Growth Index Score",gp=gpar(fontsize=15)), 
+                         left = textGrob("Count",gp=gpar(fontsize=11), rot = 90),
+                         bottom = textGrob("Growth Index Score",gp=gpar(fontsize=11))))
 ```
 
 ```{r}
@@ -126,7 +145,7 @@ ACT.info <- school_df_final %>%
                 percent_ACTSC_meeting,
                 percent_ACTWR_meeting,
                 percent_ACT_meeting)
-cor.ACT <- cor(my_data2, use = "complete.obs")
+cor.ACT <- cor(ACT.info, use = "complete.obs")
 
 get_upper_tri <- function(cormat){
   cormat[upper.tri(cormat)]<- NA
@@ -145,7 +164,7 @@ ggplot(data = melted_cormat, aes(x=Var1, y=Var2, fill=value)) +
   scale_fill_gradient2(low = "#edf8b1", mid = "#7fcdbb", high = "#2c7fb8", 
                        midpoint = (min(cor.ACT) + 1)/2, limit = c(min(cor.ACT),1), space = "Lab", 
                        name="Correlation") + 
-  theme_minimal() +
+  theme_bw() +
   rotate_x_text(angle = 50) 
 ```
 
@@ -153,21 +172,21 @@ ggplot(data = melted_cormat, aes(x=Var1, y=Var2, fill=value)) +
 numeric.cols <- school_df_final[ , purrr::map_lgl(school_df_final, is.numeric)]
 
 pairs.panels(numeric.cols[c(ncol(numeric.cols), 1:4)],
-                    smooth = FALSE,
-                    pch = 1,
-                    ellipses = FALSE,
-                    hist.col = "#80b1d3")
+             smooth = FALSE,
+             pch = 1,
+             ellipses = FALSE,
+             hist.col = "#80b1d3") 
 pairs.panels(numeric.cols[c(ncol(numeric.cols), 5:8)],
-                    smooth = FALSE,
-                    pch = 1,
-                    ellipses = FALSE,
-                    hist.col = "#80b1d3")
+             smooth = FALSE,
+             pch = 1,
+             ellipses = FALSE,
+             hist.col = "#80b1d3")
 
 pairs.panels(numeric.cols[c(ncol(numeric.cols), 9:11)],
-                    smooth = FALSE,
-                    pch = 1,
-                    ellipses = FALSE,
-                    hist.col = "#80b1d3")
+             smooth = FALSE,
+             pch = 1,
+             ellipses = FALSE,
+             hist.col = "#80b1d3")
 
 pairs(numeric.cols[c(ncol(numeric.cols), 5:8)],
       lower.panel = NULL)
