--- a/Project Modeling.Rmd
+++ b/Project Modeling.Rmd
@@ -34,7 +34,6 @@ library(e1071)
 library(caret)
 library(psych)
 library(randomForest)
-<<<<<<< HEAD
 library(gridExtra)
 library(grid)
 library(jtools)
@@ -42,8 +41,6 @@ library(jtools)
 
 ggplot2::theme_set(ggplot2::theme_bw())
 knitr::opts_chunk$set(fig.align = 'center')
-=======
->>>>>>> df2e841ccd3d2dd4f85b6418ed4bc0f6157745c7
 ```
 
 ```{r message = FALSE}
@@ -313,6 +310,7 @@ ggplot(data=school_df_final, aes(x=percent_ACT_meeting ,y=growth_index_score, co
 
 ```{r}
 plot(linear.fit9)
+BIC(linear.fit9)
 ```
 
 
@@ -337,6 +335,8 @@ AIC(gam3)
 AIC(gam4)
 AIC(gam5)
 AIC(gam6)
+
+BIC(gam6)
 
 plot(gam6, all.terms = TRUE, seWithMean = TRUE, pages = 1)
 
@@ -389,19 +389,23 @@ reshaped.predictions %>%
 
 
 ```{r}
+
 ggplot(reshaped.predictions, aes(x = percent_white, y = Probability, colour = Level)) +
   geom_smooth(se = F) + 
-  labs(title = "Probability of Meeting Standards by Percent White") + theme_bw()
-
+  labs(title = "Probability of Meeting Standards by Percent White",
+       x = "% White") + 
+  theme_bw()
 
 ggplot(reshaped.predictions, aes(x = percent_ACT_meeting, y = Probability, colour = Level)) +
   geom_smooth(se = F) + 
-  labs(title = "Probability of Meeting Standards by Percent Meeting ACT Standards") + theme_bw()
+  labs(title = "Probability of Meeting Standards by Percent Meeting ACT Standards",
+       x = "% Meeting ACT Benchmark") + theme_bw()
 
 ggplot(reshaped.predictions, aes(x = region, y = Probability, fill = Level)) +
   geom_bar(stat = "identity", position = "fill") + theme_bw() + 
   rotate_x_text(angle = 50) + 
-  labs(title = "Probability of Meeting Standards by Region")
+  labs(title = "Probability of Meeting Standards by Region",
+       x = "Region")
 
 
 ```
